--- a/zzz_local.css
+++ b/zzz_local.css
@@ -15,6 +15,13 @@ body {
     padding: 5 em;
 }
 
+bn-logo .{
+    max-width: 100% !important;
+    width: 600px !important;
+    height: auto !important;
+}
+
+
 h2.latest {
     margin-top:30px;
     border-bottom: 1px solid #606060;
