--- a/zzz_local.css
+++ b/zzz_local.css
@@ -98,7 +98,7 @@ h3 {
     z-index: 1;
     margin: 0px auto;
     position: relative;
-    padding-left: 20px;
+    text-align:center;
 }
 
 #local_menu_search {
