--- a/zzz_local.css
+++ b/zzz_local.css
@@ -91,8 +91,7 @@ h3 {
     padding: 0px;
     border: 0px none;
     vertical-align: top;
-    margin: 0px;
-    text-align: center;
+    margin: 0px auto;
 }
 
 #local_menu {
