--- a/zzz_local.css
+++ b/zzz_local.css
@@ -15,6 +15,7 @@ body {
     padding-left: 2em;
     padding-right: 2em;
     background-color: #ffffff !important;
+    font-size: 90% !important;
 }
 
 
@@ -98,10 +99,6 @@ h3 {
 #local_menu {
     z-index: 1;
     position: relative;
-
-    display: flex;
-    justify-content: center;
-
 }
 
 #local_menu_search {
@@ -115,10 +112,6 @@ h3 {
 
 .ep_tm_menu{
     width: 100%;
-
-    display: flex;
-    justify-content: center;
-
 }
 
 .ep_toolbox {
