--- a/zzz_local.css
+++ b/zzz_local.css
@@ -16,6 +16,7 @@ body {
     padding-right: 2em;
     background-color: #ffffff !important;
     font-size: 90% !important;
+    max-width: 900px;
 }
 
 
