--- a/zzz_local.css
+++ b/zzz_local.css
@@ -17,6 +17,9 @@ body {
     background-color: #ffffff !important;
     font-size: 90% !important;
     max-width: 900px;
+    display: flex;
+    justify-content: center;
+
 }
 
 
