--- a/zzz_local.css
+++ b/zzz_local.css
@@ -11,11 +11,25 @@
  * 
  */
 
+/*-------- body -------------------- */
 body {
     padding-left: 2em;
     padding-right: 2em;
     background-color: #ffffff !important;
     font-size: 90% !important;
+}
+
+#wrapper
+{
+    background-color: #ffffff;
+    box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
+    padding: 5px;
+    max-width: 900px;
+    margin: 10px auto;
+}
+#main_content
+{
+    min-height: 640px;
 }
 
 
