--- a/zzz_local.css
+++ b/zzz_local.css
@@ -21,11 +21,7 @@ body {
 
 #wrapper
 {
-    background-color: #ffffff;
-    box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
-    padding: 5px;
-    max-width: 900px;
-    margin: 10px auto;
+    max-width: 900px !important;
 }
 #main_content
 {
