--- a/zzz_local.css
+++ b/zzz_local.css
@@ -70,7 +70,7 @@ h1.ep_tm_pagetitle {
 .ep_tm_header {
     background-color: #fff;
     background-image: none;
-    background-repeat: repeat-y;
+    background-repeat: none;
     text-align: center;
     margin-bottom: -1px;
 }
