--- a/zzz_local.css
+++ b/zzz_local.css
@@ -20,6 +20,13 @@ body {
     height: auto !important;
     max-width: 960px;
     margin: auto;
+
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+
+
 }
 
 #wrapper
