--- a/zzz_local.css
+++ b/zzz_local.css
@@ -21,10 +21,10 @@ body {
     max-width: 960px;
     margin: auto;
 
-    text-size-adjust: none;
-    -webkit-text-size-adjust: none;
-    -moz-text-size-adjust: none;
-    -ms-text-size-adjust: none;
+    text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
 
 
 }
