--- a/zzz_local.css
+++ b/zzz_local.css
@@ -138,4 +138,15 @@ h3 {
     margin-bottom: 0px;
 }
 
+/* responsiveness */
+@media (min-width: 700px) {
+
+    .ep_tm_menu li{
+        float: left;
+    }
+
+}
+
+
+
 
