--- a/zzz_local.css
+++ b/zzz_local.css
@@ -142,7 +142,16 @@ h3 {
 @media (min-width: 700px) {
 
     .ep_tm_menu li{
-        float: left !important;
+	float: left !important;
+    }
+
+    #menu {
+	z-index: 100;
+	width: 100%;
+	padding: 0px;
+	border: 0px none;
+	display: block;
+	justify-content: center;
     }
 
 }
