--- a/zzz_local.css
+++ b/zzz_local.css
@@ -139,15 +139,16 @@ h3 {
 }
 
 /* responsiveness */
-@media (max-width: 600px) {
+@media (max-width: 700px) {
+
+    .ep_tm_menu li{
+	float: left !important;
+    }
 
     #menu {
-	z-index: 100;
-	width: 100%;
-	padding: 0px;
 	border: 0px none;
 	display: block;
-	justify-content: center;
+	clear: left;
     }
 
 }
