--- a/zzz_local.css
+++ b/zzz_local.css
@@ -146,9 +146,10 @@ h3 {
     }
 
     #menu {
+	height: 60px !important;
 	border: 0px none;
-	display: block;
-	clear: left;
+	display: block !important;
+	clear: left !important;
     }
 
 }
