--- a/zzz_local.css
+++ b/zzz_local.css
@@ -153,7 +153,7 @@ h3 {
 
     .ep_tm_eprints_logo {
 	    float: left;
-	    clear: left !important;
+	    clear: right !important;
 	    margin-left: 1em;
     }
 
