--- a/zzz_local.css
+++ b/zzz_local.css
@@ -152,8 +152,7 @@ h3 {
     }
 
     .ep_tm_eprints_logo {
-	    display: block !important;
-	    margin-left: 1em;
+	    clear: both !important;
     }
 
 
