--- a/zzz_local.css
+++ b/zzz_local.css
@@ -21,6 +21,8 @@ body {
     max-width: 800px;
     margin: auto;
 
+    line-height: 1.3;
+
     text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
