--- a/zzz_local.css
+++ b/zzz_local.css
@@ -23,6 +23,8 @@ body {
 
     line-height: 1.6;
 
+    font-family: system-ui, sans-serif;
+
     text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
