--- a/zzz_local.css
+++ b/zzz_local.css
@@ -23,7 +23,7 @@ body {
 
     line-height: 1.6;
 
-    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif !important;
 
     text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
