--- a/zzz_local.css
+++ b/zzz_local.css
@@ -142,6 +142,12 @@ h3 {
     margin-bottom: 0px;
 }
 
+
+.creative-commons {
+    text-align: center;
+    font-size: 70%;
+}
+
 /* responsiveness */
 @media (max-width: 660px) {
 
