--- a/zzz_local.css
+++ b/zzz_local.css
@@ -142,6 +142,11 @@ h3 {
     margin-bottom: 0px;
 }
 
+.hr-home{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 
 .creative-commons {
     text-align: center;
