--- a/zzz_local.css
+++ b/zzz_local.css
@@ -172,7 +172,7 @@ h3 {
 }
 
 
-.ep_tm_searchbarbox .ep_tm_searchbarbutton {
+.ep_tm_searchbarbox, .ep_tm_searchbarbutton{ 
     height: 40px;
     font-size: 100% !important;
 }
