--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -155,22 +155,6 @@ h3 {
     margin:0 auto;
 }
 
-.grid-container {
-    display: grid;
-    column-gap: 30px;
-    max-width: 300px;
-}
-
-#grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 5px;
-}
-
-#grid>div {
-  padding: .5em;
-}
-
 
 .ep_tm_searchbarbox{ 
     width: 65%;
@@ -184,6 +168,61 @@ h3 {
     height: 40px;
     font-size: 100% !important;
 }
+
+
+/* homepage feed */
+
+.grid-container {
+    display: grid;
+    column-gap: 30px;
+    max-width: 400px;
+}
+
+#grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-gap: 20px;
+}
+
+#grid>div {
+  padding: .5em;
+}
+
+
+.feed-img{
+    float:right;
+    padding: 10px 10px 10px 10px;
+    width: 33%;
+}
+
+.feed-title{
+    font-size: 110%;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.feed-author{
+    padding-bottom: 10px;
+    font-size: 100%;
+    color: #555555;
+}
+
+.feed-abstract{
+    font-size: 90%;
+}
+
+.feed-date{
+    font-size: 70%;
+    padding-bottom: 10px;
+}
+
+.feed-link{
+    color: inherit;
+    text-decoration: none;
+}
+
+.feed-link:hover {color: #666666;}
+
 
 
 /* responsiveness */
