--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -32,222 +32,211 @@ body {
 
 }
 
-.homepage {
+#wrapper {
+    max-width: 900px !important;
+}
 
-    max-width: 1600px !important;
-
+#main_content {
+    min-height: 640px;
 }
 
 
-	#wrapper
-	{
-	    max-width: 900px !important;
-	}
-	#main_content
-	{
-	    min-height: 640px;
-	}
+/*-------- banner -------------------- */
+
+.bn-logo {
+    max-width: 100% !important;
+    width: 800px !important;
+    height: auto !important;
+}
 
 
-	/*-------- banner -------------------- */
+h2.latest {
+    margin-top:30px;
+    border-bottom: 1px solid #606060;
+}
 
-	.bn-logo {
-	    max-width: 100% !important;
-	    width: 800px !important;
-	    height: auto !important;
-	}
+div.ep_latest_result {
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
 
+table.ep_search_fields {
+    width: 100%;
+}
 
-	h2.latest {
-	    margin-top:30px;
-	    border-bottom: 1px solid #606060;
-	}
+h1 {
+    text-align: left;
+}
 
-	div.ep_latest_result {
-	    margin-bottom: 1em;
-	    margin-top: 1em;
-	}
+h1.ep_tm_pagetitle {
+    font-size: 170%;
+    font-weight: bold;
+    color: #cc0000;
+    padding-top: 10px;
+    margin-bottom: 13px;
+}
 
-	table.ep_search_fields {
-	    width: 100%;
-	}
+.ep_tm_header {
+    background-color: #fff;
+    background-image: none;
+    background-repeat: none;
+    text-align: center;
+    margin-bottom: -1px;
+}
 
-	h1 {
-	    text-align: left;
-	}
+.ep_tm_searchbar {
+    background-color: #FFF; 
+    background-image: none;
+}
 
-	h1.ep_tm_pagetitle {
-	    font-size: 170%;
-	    font-weight: bold;
-	    color: #cc0000;
-	    padding-top: 10px;
-	    margin-bottom: 13px;
-	}
+h2 {
+    font-size: 110%;
+    color: #000;
+}
 
-	.ep_tm_header {
-	    background-color: #fff;
-	    background-image: none;
-	    background-repeat: none;
-	    text-align: center;
-	    margin-bottom: -1px;
-	}
+h3 {
+    font-size: 100%;
+    color: #000;
+}
 
-	.ep_tm_searchbar {
-	    background-color: #FFF; 
-	    background-image: none;
-	}
+.ep_tm_menu {
+    background-image: none; 
+}
 
-	h2 {
-	    font-size: 100%;
-	    color: #000;
-	}
+#menu {
+    background-color: #204F76;
+    background-repeat: repeat-x;
+    background-position: 0px 5px;
+    z-index: 100;
+    height: 30px;
+    width: 100%;
+    clear: none;
+    padding: 0px;
+    border: 0px none;
+    vertical-align: top;
+    display: flex;
+    justify-content: center;
+}
 
-	h3 {
-	    font-size: 100%;
-	    color: #000;
-	}
+#local_menu {
+    z-index: 1;
+    position: relative;
+}
 
-	.ep_tm_menu {
-	    background-image: none; 
-	}
+#local_menu_search {
 
-	#menu {
-	    background-color: #204F76;
-	    background-repeat: repeat-x;
-	    background-position: 0px 5px;
-	    z-index: 100;
-	    height: 30px;
-	    width: 100%;
-	    clear: none;
-	    padding: 0px;
-	    border: 0px none;
-	    vertical-align: top;
-	    display: flex;
-	    justify-content: center;
-	}
+    /*z-index: 1;*/
+    margin: 0px auto;
+    width: 770px;
+    position: relative;
+}
 
-	#local_menu {
-	    z-index: 1;
-	    position: relative;
-	}
+.ep_tm_menu{
+    width: 100%;
+}
 
-	#local_menu_search {
+.ep_toolbox {
+    margin-bottom: 0px;
+}
 
-	    /*z-index: 1;*/
-	    margin: 0px auto;
-	    width: 770px;
-	    position: relative;
-	}
+.hr-home{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
+.creative-commons {
+    text-align: center;
+    font-size: 70%;
+    max-width: 300px;
+    margin:0 auto;
+}
 
-	.ep_tm_menu{
-	    width: 100%;
-	}
-
-	.ep_toolbox {
-	    margin-bottom: 0px;
-	}
-
-	.hr-home{
-	    margin-top: 20px;
-	    margin-bottom: 20px;
-	}
-
-
-	.creative-commons {
-	    text-align: center;
-	    font-size: 70%;
-	    max-width: 300px;
-	    margin:0 auto;
-	}
+.ep_tm_searchbarbox{ 
+    width: 65%;
+    height: 40px;
+    font-size: 100% !important;
+}
 
 
-	.ep_tm_searchbarbox{ 
-	    width: 65%;
-	    height: 40px;
-	    font-size: 100% !important;
-	}
+.ep_tm_searchbarbutton{ 
+    width: 25%;
+    height: 40px;
+    font-size: 100% !important;
+}
 
 
-	.ep_tm_searchbarbutton{ 
-	    width: 25%;
-	    height: 40px;
-	    font-size: 100% !important;
-	}
+/* homepage feed */
+
+.grid-container {
+    display: grid;
+    column-gap: 30px;
+    max-width: 400px;
+}
+
+#grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-gap: 20px;
+}
+
+#grid>div {
+    padding: .5em;
+}
 
 
-	/* homepage feed */
+.feed-img{
+    float:right;
+    padding: 10px 10px 10px 10px;
+    width: 33%;
+}
 
-	.grid-container {
-	    display: grid;
-	    column-gap: 30px;
-	    max-width: 400px;
-	}
+.feed-title{
+    font-size: 100%;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
 
-	#grid {
-	    display: grid;
-	    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-	    grid-gap: 20px;
-	}
+.feed-author{
+    padding-bottom: 10px;
+    font-size: 100%;
+    color: #555555;
+}
 
-	#grid>div {
-	    padding: .5em;
-	}
+.feed-abstract{
+    font-size: 90%;
+}
 
+.feed-date{
+    font-size: 70%;
+    padding-bottom: 10px;
+}
 
-	.feed-img{
-	    float:right;
-	    padding: 10px 10px 10px 10px;
-	    width: 33%;
-	}
+.feed-link{
+    text-decoration: none;
+}
 
-	.feed-title{
-	    font-size: 100%;
-	    font-weight: bold;
-	    padding-bottom: 10px;
-	}
-
-	.feed-author{
-	    padding-bottom: 10px;
-	    font-size: 100%;
-	    color: #555555;
-	}
-
-	.feed-abstract{
-	    font-size: 90%;
-	}
-
-	.feed-date{
-	    font-size: 70%;
-	    padding-bottom: 10px;
-	}
-
-	.feed-link{
-	    text-decoration: none;
-	}
-
-	.feed-link:hover {color: #666666;}
+.feed-link:hover {color: #666666;}
 
 
 
-	/* responsiveness */
-	@media (max-width: 660px) {
+/* responsiveness */
+@media (max-width: 660px) {
 
-	    .ep_tm_menu li{
-		float: left !important;
-	    }
+    .ep_tm_menu li{
+	float: left !important;
+    }
 
-	    #menu {
-		height: 60px !important;
-		border: 0px none;
-		clear: left !important;
-	    }
+    #menu {
+	height: 60px !important;
+	border: 0px none;
+	clear: left !important;
+    }
 
-	    .ep_tm_key_tools {
-		display: none !important;
-	    }
+    .ep_tm_key_tools {
+	display: none !important;
+    }
 
-	}
+}
 
 
 
