search results overflow

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -41,6 +41,13 @@ body {
 }
 
 
+/*-------- search results -------------------- */
+
+.ep_search_result{
+    overflow: scroll;
+}
+
+
 /*-------- banner -------------------- */
 
 .bn-logo {
