--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -54,6 +54,8 @@ body {
     max-width: 100% !important;
     width: 800px !important;
     height: auto !important;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 
