--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -174,7 +174,14 @@ h3 {
 }
 
 
-/* homepage feed */
+
+/*-------- previews --------------- */
+#imageContainer{
+    height: 500px !important;
+}
+
+
+/* -------- homepage feed -------- */
 
 .grid-container {
     display: grid;
