--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -241,6 +241,9 @@ h3 {
 /* homepage box */
 .homepage_box {
     background-color: #efefef;
+    margin-left: 20pt;
+    margin-right: 20pt;
+
 }
 
 
