--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -241,8 +241,10 @@ h3 {
 /* homepage box */
 .homepage_box {
     background-color: #efefef;
-    padding-top: 10pt;
-    padding-bottom: 10pt;
+    margin-top: 10pt;
+    margin-bottom: 10pt;
+    padding-top: 5pt;
+    padding-bottom: 5pt;
     padding-left: 10pt;
     padding-right: 10pt;
 
