--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -153,7 +153,7 @@ h3 {
     margin-top: 20px;
     margin-bottom: 20px;
     height: 1px;
-    color: #eceeef !important;
+    color: #efefef !important;
 }
 
 .creative-commons {
