--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -153,7 +153,8 @@ h3 {
     margin-top: 20px;
     margin-bottom: 20px;
     height: 1px;
-    color: #fefefe !important; 
+    background-color: #efefef;
+    border-color: #efefef;
 }
 
 .creative-commons {
