--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -153,8 +153,8 @@ h3 {
     margin-top: 20px;
     margin-bottom: 20px;
     height: 1px;
-    background-color: #efefef;
-    border-color: #efefef;
+    background-color: #ececec;
+    border-color: #ececec;
 }
 
 .creative-commons {
