--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -241,7 +241,7 @@ h3 {
 
 /* homepage box */
 .homepage_box {
-    background-color: #fefefe;
+    background-color: #fafafa;
     margin-top: 10pt;
     margin-bottom: 10pt;
     padding-top: 5pt;
