--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -241,16 +241,20 @@ h3 {
 
 /* homepage box */
 .homepage_box {
-    background-color: #f7f7f7;
     margin-top: 10pt;
     margin-bottom: 10pt;
     padding-top: 5pt;
     padding-bottom: 5pt;
     padding-left: 10pt;
     padding-right: 10pt;
-
+    border: 1px;
 }
 
+
+.homepage_heading {
+    background-color: #f7f7f7;
+
+}
 
 /* responsiveness */
 @media (max-width: 660px) {
