--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -247,7 +247,7 @@ h3 {
     padding-bottom: 5pt;
     padding-left: 10pt;
     padding-right: 10pt;
-    border: 1px;
+    border:1px solid #ababab;
 }
 
 
