--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -243,11 +243,7 @@ h3 {
 .homepage_box {
     margin-top: 10pt;
     margin-bottom: 10pt;
-    padding-top: 5pt;
-    padding-bottom: 5pt;
-    padding-left: 10pt;
-    padding-right: 10pt;
-    border:1px solid #ababab;
+    border:1px solid #eeeeee;
 }
 
 
