--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -254,6 +254,8 @@ h3 {
 .homepage_box_heading {
     padding-left: 10pt;
     padding-right: 10pt;
+    padding-top: 10pt;
+    padding-bottom: 10pt;
     font-size: 110%;
     font-weight: bold;
 }
