--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -258,7 +258,7 @@ h3 {
     padding-bottom: 8pt;
     font-size: 110%;
     font-weight: bold;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .homepage_box_content{
