--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -267,6 +267,10 @@ h3 {
     padding-top: 10pt;
 }
 
+a.home_page_heading_link{
+    text-decoration: none !important;
+}
+
 
 /* responsiveness */
 @media (max-width: 660px) {
