--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -267,7 +267,7 @@ h3 {
     padding-top: 10pt;
 }
 
-a.home_page_heading_link{
+a.homepage_heading_link{
     text-decoration: none !important;
 }
 
