--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -236,7 +236,9 @@ h3 {
     color: black !important;
 }
 
-.feed-link:hover {color: #666666;}
+.feed-link:hover {
+    color: #666666 !important;
+}
 
 
 
