--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -268,7 +268,7 @@ h3 {
     padding-left: 10pt;
     padding-right: 10pt;
     padding-top: 10pt;
-    paddint-bottom: 10pt;
+    padding-bottom: 10pt;
 }
 
 
