--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -252,7 +252,7 @@ h3 {
 
 
 .homepage_heading_panel {
-    background-color: #f7f7f7;
+    background-color: #e6f3f8;
 }
 
 .homepage_box_heading {
