--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -252,7 +252,7 @@ h3 {
 
 
 .homepage_heading_panel {
-    background-color: #edf4f8;
+    background-color: #eff4f8;
 }
 
 .homepage_box_heading {
