--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -210,6 +210,10 @@ h3 {
     width: 33%;
 }
 
+.feed-img: hover{
+   border: 1px solid #000; 
+}
+
 .feed-title{
     font-size: 100%;
     font-weight: bold;
