--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -211,7 +211,7 @@ h3 {
 }
 
 .feed-img:hover{
-   border: 1px solid #000 !important; 
+   border: 1px solid #dddddd !important; 
 }
 
 .feed-title{
