--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -193,6 +193,10 @@ h3 {
     max-width: 400px;
 }
 
+.grid-item:hover{
+    color: #666666 !important;
+}
+
 #grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
