--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -290,6 +290,7 @@ h3 {
 
     #menu {
 	height: 500px !important;
+	display: block !important;
 	border: 0px none;
 	clear: left !important;
     }
