h1 font and color

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -75,9 +75,9 @@ h1 {
 }
 
 h1.ep_tm_pagetitle {
-    font-size: 170%;
+    font-size: 150%;
     font-weight: bold;
-    color: #cc0000;
+    color: #990000;
     padding-top: 10px;
     margin-bottom: 13px;
 }
