--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -77,7 +77,7 @@ h1 {
 h1.ep_tm_pagetitle {
     font-size: 150%;
     font-weight: bold;
-    color: #990000;
+    color: #c00000;
     padding-top: 10px;
     margin-bottom: 13px;
 }
