--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -139,11 +139,6 @@ h3 {
     position: relative;
 }
 
-.ep_tm_menu li:active{
-	background-color: #313131 !important;
-	color: #121212 !important;
-}
-
 .ep_tm_menu{
     width: 100%;
 }
@@ -210,6 +205,10 @@ h3 {
 
 .grid-item:where(:hover, :focus) {
     background-color: #fafafa;
+}
+
+.grid-item:where(:active) {
+    background-color: #ffe9ec;
 }
 
 
