--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -58,7 +58,7 @@ body {
 
 h2.latest {
     margin-top:30px;
-    border-bottom: 1px solid #606060;
+    border-bottom: 1px solid #e1e1e1;
 }
 
 div.ep_latest_result {
