--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -106,8 +106,13 @@ h3 {
 
 .ep_tm_menu {
     background-image: none; 
-    padding-left: 0px 15px 0px 15px;
 }
+
+
+.ep_tm_menu a, .ep_tm_menu a:visited {
+    border: 0px 20px 0px 20px !important;
+}
+
 
 
 #menu {
