--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -110,7 +110,7 @@ h3 {
 
 
 .ep_tm_menu a, .ep_tm_menu a:visited {
-    border: 0px 20px 0px 20px !important;
+    padding: 0px 20px 0px 20px !important;
 }
 
 
