--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -110,7 +110,8 @@ h3 {
 
 
 .ep_tm_menu a, .ep_tm_menu a:visited {
-    padding: 0px 20px 0px 20px !important;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 
