--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -104,6 +104,26 @@ h3 {
     color: #000;
 }
 
+
+/*-------- menu  -------------------- */
+
+#hamburger-menu {
+    width: 50px;
+    height: 50px;
+    display: block;
+    border: none;
+    padding: 0px;
+    margin: 20px;
+    background: linear-gradient(
+      to bottom, 
+      #3D0E61, #3D0E61 20%, 
+      white 20%, white 40%, 
+      #3D0E61 40%, #3D0E61 60%, 
+      white 60%, white 80%, 
+      #3D0E61 80%, #3D0E61 100%
+    );
+}
+
 .ep_tm_menu {
     background-image: none; 
 }
