--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -108,6 +108,7 @@ h3 {
 /*-------- menu  -------------------- */
 
 #hamburger-menu {
+    display: none;
     width: 50px;
     height: 50px;
     display: block;
@@ -123,6 +124,8 @@ h3 {
       #3D0E61 80%, #3D0E61 100%
     );
 }
+
+
 
 #hamburger-menu #menu{
     visibilty: hidden;
@@ -321,6 +324,10 @@ h3 {
 /* --------  responsiveness ------------ */
 @media (max-width: 660px) {
 
+
+#hamburger-menu {
+    display: inline;
+}
     .ep_tm_menu li{
 	display: block !important;
 	width: 100% !important;
