--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -353,9 +353,9 @@ h3 {
     min-width:140px;
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
     color: #fff;
-    text-transform:uppercase;
-    background: #8aa8bd;
+    background: #204F76;
     text-decoration: none;
     margin-left:-5px;
     padding: 10px 0;  
