--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -408,7 +408,7 @@ h3 {
 .mobile-menu .show-menu {
     text-decoration: none;
     color: #fff;
-    background: #8aa8bd;
+    background: #204F76;
     text-align: center;
     padding: 10px 15px;
     display: none;
