--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -323,7 +323,6 @@ h3 {
     width:100%;
     background: #204F76;
     line-height: 1.6em;
-    font-weight: 400;
     width:100%;
     text-align:center;
     position: relative;
@@ -343,8 +342,6 @@ h3 {
 /*Create a horizontal list with spacing*/
 .mobile-menu li {
     display:inline-block;
-    /*float: left;
-    margin-right: 1px;*/
 }
 
 /*Style for menu links*/
@@ -352,7 +349,7 @@ h3 {
     display:block;
     min-width:140px;
     text-align: center;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
     font-weight: bold;
     color: #fff;
     background: #204F76;
@@ -431,7 +428,7 @@ h3 {
 
 /*Responsive Styles*/
 
-@media screen and (max-width : 800px){
+@media screen and (max-width : 660px){
     .mobile-menu .lines {
 	border-bottom: 15px double #f8f8f8; 
 	border-top: 5px solid #f8f8f8; 
