--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -353,7 +353,7 @@ h3 {
     color: #fff;
     background: #204F76;
     text-decoration: none;
-    padding: 10px 0;  
+    padding: 10px 30px;  
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
     -ms-transition: all 0.4s ease 0s;
