--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -87,6 +87,7 @@ h1.ep_tm_pagetitle {
     background-color: #fff;
     background-image: none;
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .ep_tm_searchbar {
