--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -215,7 +215,7 @@ h3 {
 
 
 .homepage_heading_panel {
-    background-color: #fcfcfc;
+    background-color: #f7f7f7;
 }
 
 .homepage_box_heading {
