--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -147,11 +147,12 @@ h3 {
 .grid-container {
     display: grid;
     column-gap: 30px;
+    max-width: 400px;
 }
 
 #grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(900px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     grid-gap: 20px;
 }
 
