--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -171,7 +171,9 @@ h3 {
 .feed-img{
     float:right;
     padding: 20px 20px 20px 20px;
-    width: 15%;
+    width: 20%;
+    display: none;
+
 }
 
 .feed-title{
