--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -175,7 +175,8 @@ li.homepage-list {
 .feed-img{
     float:right;
     padding: 20px 20px 20px 20px;
-    width: 20%;
+    width: 25%;
+    display: none;
 
 }
 
