small screen header margin

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -414,6 +414,11 @@ li.homepage-list {
 
 @media screen and (max-width : 400px){
 
+
+.ep_tm_header {
+    margin-bottom: 20px;
+}
+
     #grid {
 	grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
     }
