--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -356,7 +356,7 @@ li.homepage-list {
 .mobile-menu li ul li {
     display: flex;
     float: none;
-    background: #f3f3f3;
+    background: #e3e3e3;
 }
 
 /* sublist */
