full page nav bar?

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -254,7 +254,8 @@ li.homepage-list {
 
 .mobile-menu {
     display:block;
-    width:100%;
+    width: 2000px;
+
     background: #204F76;
     line-height: 1.6em;
     width:100%;
