--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -253,6 +253,7 @@ li.homepage-list {
 /* code from here: https://codepen.io/deyand/pen/pvmyjw */
 
 .mobile-menu {
+    float: left;
     display:block;
     width:100%;
     background: #204F76;
