--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -193,6 +193,16 @@ li.homepage-list {
 }
 
 
+/* -------- search box -------------- */
+.ep_search_buttons {
+    background: #f7f7f7;
+    box-shadow: none;
+    border-width: 0px;
+}
+
+
+
+
 /* -------- homepage box -------------- */
 
 .homepage_box {
