search menu responsive

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -415,6 +415,11 @@ li.homepage-list {
 	display: block;
     }
 
+    /* search menu cells*/
+    .ep_option_list_cell{
+	display: block
+    }
+
 }
 
 
