search form max width

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -201,7 +201,9 @@ li.homepage-list {
     padding: 9px 0px;
 }
 
-
+input.ep_form_text {
+    max-width: 60%;
+}
 
 
 /* -------- homepage box -------------- */
