remove search menu help image narrow screens

--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -425,7 +425,12 @@ input.ep_form_text {
 
     /* search menu cells*/
     .ep_option_list_cell{
-	display: block
+	display: block;
+    }
+
+    /* search menu help image */
+    .ep_sr_show_help img {
+	display: none;
     }
 
 }
