--- a/css/zzz_local.css
+++ b/css/zzz_local.css
@@ -11,9 +11,7 @@
  * 
  */
 
-html {
-    width: 100%;
-}
+
 
 
 /*-------- body -------------------- */
@@ -69,10 +67,6 @@ div.ep_latest_result {
     margin-top: 1em;
 }
 
-table.ep_search_fields {
-    width: 100%;
-}
-
 h1 {
     text-align: left;
 }
@@ -90,11 +84,6 @@ h1.ep_tm_pagetitle {
     background-image: none;
     text-align: center;
     margin-bottom: 50px;
-}
-
-.ep_tm_searchbar {
-    background-color: #FFF; 
-    background-image: none;
 }
 
 h2 {
@@ -199,6 +188,11 @@ li.homepage-list {
 
 /* -------- search -------------- */
 
+.ep_tm_searchbar {
+    background-color: #FFF; 
+    background-image: none;
+}
+
 .ep_search_buttons {
     background: #f7f7f7;
     box-shadow: none;
@@ -212,6 +206,11 @@ input.ep_form_text {
 
 .ep_search_fields {
     font-size: 90%;
+    overflow: hidden;
+}
+
+table.ep_search_fields {
+    width: 100%;
 }
 
 
